test/typechecker.d/invalid/fns2.surc.bad
n = 5

f(x: Integer): Integer = fndo
	if true
		return n
	return 'a'
